--- a/app/src/main/res/layout/activity_new_char.xml
+++ b/app/src/main/res/layout/activity_new_char.xml
@@ -51,7 +51,7 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name_row"
+            android:layout_below="@+id/race_row"
             android:layout_marginTop="5dp"
             android:id="@+id/class_row">
 
@@ -76,7 +76,7 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/class_row"
+            android:layout_below="@+id/name_row"
             android:layout_marginTop="5dp"
             android:id="@+id/race_row">
 
@@ -105,7 +105,7 @@
             android:text="@string/stat_grp_label_string"
             android:textSize="20sp"
             android:textColor="#F0F0F0"
-            android:layout_below="@+id/race_row"/>
+            android:layout_below="@+id/class_row"/>
 
         <CheckBox
             android:id="@+id/standard_array_check"
