--- a/app/src/main/res/layout/activity_spell_book.xml
+++ b/app/src/main/res/layout/activity_spell_book.xml
@@ -1,18 +1,49 @@
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
+    tools:context="com.project.senior.dndapp.SpellBookActivity"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#006699"
-    tools:context="com.project.senior.dndapp.SpellBookActivity">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="#006699">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/spellbook_text"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
+            android:layout_weight=".33"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@string/spellbook_sort_text"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_weight=".3"
+            android:inputType="text"
             android:layout_height="wrap_content" />
 
-</ScrollView>
+        <Spinner
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/spell_sort_spinner"
+            android:layout_weight=".3"/>
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/spellbook_listView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
+</LinearLayout>
+
+
