--- a/app/src/main/res/layout/activity_spell_book.xml
+++ b/app/src/main/res/layout/activity_spell_book.xml
@@ -18,24 +18,24 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight=".33"
+            android:layout_weight=".3"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:text="@string/spellbook_sort_text"/>
 
         <EditText
             android:layout_width="0dp"
-            android:layout_weight=".3"
+            android:layout_weight=".7"
             android:inputType="text"
             android:layout_height="wrap_content" />
 
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/spell_sort_spinner"
-            android:layout_weight=".3"/>
-
     </LinearLayout>
+
+    <Spinner
+        android:id="@+id/spell_sort_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"/>
 
     <ListView
         android:id="@+id/spellbook_listView"
