--- a/app/src/main/res/values/druidspells.xml
+++ b/app/src/main/res/values/druidspells.xml
@@ -1,5 +1,5 @@
 <resources>
-	<string-array name="druidspels">
+	<string-array name="druidspells">
 		<item>Control Flames</item>
 		<item>Create Bonfire</item>
 		<item>Druidcraft</item>
