--- a/app/src/main/res/layout/activity_new_character_spells.xml
+++ b/app/src/main/res/layout/activity_new_character_spells.xml
@@ -7,11 +7,63 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#006699"
     tools:context="com.project.senior.dndapp.NewCharacterSpells">
 
     <TextView
         android:id="@+id/test_char_xfer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:textColor="#F0F0F0"/>
+
+    <TextView
+        android:id="@+id/num_spells"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:textColor="#F0F0F0"
+        android:layout_below="@+id/test_char_xfer"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/num_spells">
+
+        <TextView
+            android:id="@+id/cantrip_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textColor="#F0F0F0"
+            android:text="@string/cantrip_label_text"
+            android:gravity="center_horizontal"/>
+
+        <ListView
+            android:id="@+id/available_cantrips"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".5">
+        </ListView>
+
+        <TextView
+            android:id="@+id/spell_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textColor="#F0F0F0"
+            android:text="@string/spell_label_text"
+            android:gravity="center_horizontal"/>
+
+        <ListView
+            android:id="@+id/available_spells"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".5">
+
+        </ListView>
+
+    </LinearLayout>
 
 </RelativeLayout>
